--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "vite": "^7.1.9"
   },
   "optionalDependencies": {
-    "bufferutil": "^4.0.8"
+    "bufferutil": "^4.0.8",
+    "@rollup/rollup-linux-x64-gnu": "*"
   },
   "overrides": {
     "@esbuild-kit/esm-loader": "npm:tsx",
